[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.15.0"
edition = "2021"
rust-version = "1.85"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-evm = { version = "0.15.0", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.15.0", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-eips = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.2" }
alloy-rpc-types-eth = { version = "1.0.0", default-features = false }

# op-alloy
alloy-op-hardforks = { version = "0.2" }
op-alloy-consensus = { version = "0.18", default-features = false }

# revm
revm = { version = "27.0.3", default-features = false }
op-revm = { version = "8.0.3", default-features = false }

# misc
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1"

[patch.crates-io]
# Use local revm with system call inspection support
# Based on revm branch: rakita/bump_v83 (commit 5f66d67a)
# + cherry-picked: rezbera/add-system-tx-inspection (InspectSystemCallEvm trait implementation)
# Enables inspection/tracing of system calls for debug_traceTransaction and debug_traceBlock APIs
revm = { path = "../revm/crates/revm" }
revm-primitives = { path = "../revm/crates/primitives" }
revm-interpreter = { path = "../revm/crates/interpreter" }
revm-inspector = { path = "../revm/crates/inspector" }
revm-handler = { path = "../revm/crates/handler" }
revm-context = { path = "../revm/crates/context" }
revm-context-interface = { path = "../revm/crates/context/interface" }
revm-database = { path = "../revm/crates/database" }
revm-database-interface = { path = "../revm/crates/database/interface" }
revm-state = { path = "../revm/crates/state" }
revm-bytecode = { path = "../revm/crates/bytecode" }
revm-precompile = { path = "../revm/crates/precompile" }
op-revm = { path = "../revm/crates/op-revm" }
#revm = { git = "https://github.com/bluealloy/revm", rev = "11b16259" }
#op-revm = { git = "https://github.com/bluealloy/revm", rev = "11b16259" }